syntax =  "proto3";

option go_package = "github.com/aclgo/simple-api-gateway/proto-service/proto";  

import "google/protobuf/timestamp.proto";

message User {
    string id = 1;
    string name = 2;
    string last_name = 3;
    string password = 4;
    string email = 5;
    string role = 6;
    string verified = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

message CreateUserRequest {
    string name = 1;
    string last_name = 2;
    string password = 3;
    string email = 4;
}

message CreatedUserResponse {
    User user = 1;
}

message UserLoginRequest {
    string email = 1;
    string password = 2;
}

message Tokens {
    string access_token = 1;
    string refresh_token = 2;
}

message UserLoginResponse{
    Tokens tokens = 1; 
}

message UserLogoutRequest{
    string access_token = 1;
    string refresh_token = 2;    
}

message UserLogoutResponse{

}

message FindByIdRequest {
    string id = 1;
}

message FindByIdResponse{
    User user = 1;
}

message FindByEmailRequest{
    string email = 1;
}

message FindByEmailResponse{
    User user = 1;
}

message UpdateRequest {
    string id = 1;
    string name = 2;
    string lastname = 3;
    string password = 4;
    string email = 5;
    string verified = 6;
}

message UpdateResponse {
    User user = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    string user_id = 1;
    string user_role = 2;
}

message RefreshTokensRequest {
    string access_token = 1;
    string refresh_token = 2;
}

message RefreshTokensResponse {
    string access_token = 1;
    string refresh_token = 2;
}

service UserService {
    rpc Register(CreateUserRequest) returns (CreatedUserResponse);
    rpc Login(UserLoginRequest)returns (UserLoginResponse);
    rpc Logout(UserLogoutRequest) returns (UserLogoutResponse);
    rpc FindById(FindByIdRequest) returns (FindByIdResponse);
    rpc FindByEmail(FindByEmailRequest) returns (FindByEmailResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc RefreshTokens(RefreshTokensRequest) returns (RefreshTokensResponse);
}

